# jubjub-schnorr

./: AGENTS.md  CHANGELOG.md  Cargo.toml  Makefile  README.md
.github/workflows/: dusk_ci.yaml
benches/: signature.rs  signature_double.rs  signature_var_generator.rs
src/: error.rs  gadgets.rs  lib.rs  multisig.rs  nonce.rs  serde_support.rs  signatures.rs
src/gadgets/: double.rs  var_gen.rs
src/keys/: public.rs  secret.rs
src/keys/public/: double.rs  var_gen.rs
src/keys/secret/: double.rs  var_gen.rs
src/signatures/: double.rs  var_gen.rs
tests/: gadgets.rs  keys.rs  nonce_reuse.rs  schnorr.rs  schnorr_double.rs  schnorr_multisig.rs  schnorr_var_generator.rs  serde.rs
