[package]
name = "jubjub-schnorr"
version = "0.6.0"
edition = "2021"
readme = "README.md"
repository = "https://github.com/dusk-network/jubjub-schnorr"
keywords = ["cryptography", "schnorr", "zk-snarks", "zero-knowledge", "signatures"]
categories =["algorithms", "cryptography", "mathematics"]
description = "A pure-Rust implementation of Schnorr signatures with a PLONK circuit module additionally"
exclude = [
    ".gitignore",
    "Cargo.lock",
    ".github/"
]
license = "MPL-2.0"

[dependencies]
rand_core = { version = "0.6", default-features = false }
dusk-bytes = "0.1"
dusk-poseidon = "0.41"
dusk-bls12_381 = { version = "0.14", default-features = false }
dusk-jubjub = { version = "0.15", default-features = false, features = ["zeroize"] }
ff = { version = "0.13", default-features = false }
zeroize = { version = "1", default-features = false, features = ["derive"] }
rkyv = { version = "0.7", optional = true, default-features = false }
bytecheck = { version = "0.6", optional = true, default-features = false }
dusk-plonk = { version = "0.21", default-features = false, features = ["alloc"], optional = true }
serde = { version = "1.0", default-features = false, optional = true }
bs58 = { version = "0.4" , default-features = false, optional = true }

[dev-dependencies]
rkyv = { version = "0.7", default-features = false, features = ["size_32"] }
criterion = "0.3"
rand = "0.8"
lazy_static = "1.4"
serde_json = "1.0"

[[bench]]
name = "signature"
harness = false
required-features = ["zk"]

[[bench]]
name = "signature_double"
harness = false
required-features = [
    "zk",
]

[[bench]]
name = "signature_var_generator"
harness = false
required-features = [
    "zk",
]

[features]
alloc = []
zk = [
    "dusk-plonk",
    "dusk-poseidon/zk",
]
rkyv-impl = [
    "dusk-jubjub/rkyv-impl",
    "rkyv",
    "bytecheck",
]
serde = [
    "serde/alloc",
    "bs58/alloc",
]

[[test]]
name = "gadgets"
path = "tests/gadgets.rs"
required-features = ["zk"]

# we use the approach from https://github.com/victe/rust-latex-doc-minimal-example
# to render latex on docs.rs
[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./katex-header.html" ]
